[gd_scene load_steps=5 format=3 uid="uid://c4fkk0ysr51ub"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_715gh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqwjt"]
bg_color = Color(0.648624, 0.15717, 0.179527, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7kgb"]
bg_color = Color(0.0541508, 0.435279, 0.865707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edf8o"]
bg_color = Color(0.632931, 0.661748, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_715gh")

[node name="GameOverContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="GameOverContainer"]
custom_minimum_size = Vector2(640, 320)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yqwjt")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.0
offset_right = 246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TopLabel" type="Label" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "YOU HAVE LOST"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESTART GAME"

[node name="MenuButton" type="Button" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GO TO MENU"

[node name="LevelCompleteContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelCompleteContainer"]
custom_minimum_size = Vector2(640, 320)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k7kgb")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompleteContainer/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -274.5
offset_right = 274.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="LevelCompleteLabel" type="Label" parent="LevelCompleteContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "RESULTS"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LevelCompleteContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/fill = SubResource("StyleBoxFlat_edf8o")
value = 67.72

[node name="RatingLabel" type="Label" parent="LevelCompleteContainer/Panel/VBoxContainer/ProgressBar"]
layout_mode = 2
offset_top = -27.0
offset_right = 549.0
offset_bottom = -4.0
text = "Rating:"

[node name="Label" type="Label" parent="LevelCompleteContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Innocents Killed Penalty:  -25pts"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelCompleteContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="NextButton" type="Button" parent="LevelCompleteContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NEXT LEVEL"

[node name="RetryButton" type="Button" parent="LevelCompleteContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY LEVEL"

[connection signal="pressed" from="GameOverContainer/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverContainer/Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/Panel/VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/Panel/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
